feature: adiciona novos endpoints
