# src/infra/controllers/order-controller.ts
@@ -1,6 +1,7 @@
 import Checkout from "../../application/usecases/order/checkout";
 import GetStatusOrder from "../../application/usecases/order/get-status-order";
 import ListOrders from "../../application/usecases/order/list-orders";
+import UpdateStatusOrder from "../../application/usecases/order/update-status-order";
 import { inject } from "../di/registry";
 import HttpServer from "../http/http-server";
 import CheckoutDTO from "./dto/checkout.dto";
@@ -14,6 +15,8 @@ export default class OrderController {
   private readonly listOrders?: ListOrders;
   @inject("getStatusOrder")
   private readonly getStatusOrder?: GetStatusOrder;
+  @inject("updateStatusOrder")
+  private readonly updateStatusOrder?: UpdateStatusOrder;
 
   constructor() {
     this.registerRoutes();
@@ -38,8 +41,17 @@ export default class OrderController {
       "/orders/:id/status",
       async (params: any) => {
         const { id } = params;
-        const orders = await this.getStatusOrder?.execute(id);
-        return orders;
+        const order = await this.getStatusOrder?.execute(id);
+        return order;
+      }
+    );
+    this.httpServer?.register(
+      "put",
+      "/orders/:id/status/:status",
+      async (params: any) => {
+        const { id, status } = params;
+        await this.updateStatusOrder?.execute({ id, status });
+        return { message: "Order updated successfully", data: { id, status } };
       }
     );
   }
